--- a/config.yaml
+++ b/config.yaml
@@ -32,19 +32,20 @@ conext:
   insighthome:
     host: "192.168.1.5"
     port: 503
-    ids: [10,50,170,171,190]
+    ids: [11,170,171,190]
 
   # Hack to preset Modbus ID <> Hardware Serial Number when it can't be fetch
-  # like it's the case for the XW+6848. Get the value for your Conext device
+  # like it's the case for the XW6848+/Pro. Get the value for your Conext device
   # from the Conext InsightHome's web interface.
   serial_number_hack:
-    10: "0000184D948A"
+    #10: "0000184D948A"
+    11: "00001DADECC6"
 
   # Define host/port if you want to use socketcand otherwise, socketcan will be used
   # channel must be defined in both cases.
   xanbus_sniffer:
-    #host: "192.168.1.4"
-    #port: "29536"
+    host: "192.168.1.4"
+    port: "29536"
     channel: "can0"
 
 # If you want to push data in MQTT (for the GUI part of BerryBMS, Node-RED, etc.)
